--- a/pokedex/index.html
+++ b/pokedex/index.html
@@ -16,29 +16,17 @@
 
         <!-- Meu CSS -->
         <link rel="stylesheet" href="assets/css/global.css">
-        <link rel="stylesheet" href="assets/css/pokemon.css">
+        <link rel="stylesheet" href="assets/css/pokedex.css">
     </head>
     <body>
-        
         <section class="content">
             <h1>Pokédex</h1>
             <ol class="pokemons">
-                <li class="pokemon">
-                    <span class="number">#001</span>
-                    <span class="name">Bulbasaur</span>
-                    <div class="detail">
-                        <ol class="types">
-                            <li class="type">grass</li>
-                            <li class="type">poison</li>
-                        </ol>
-                        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg" alt="Bulbasaur">
-                    </div>
-                </li>
             </ol>
         </section>
-        
     </body>
 
     <!-- Nosso JS -->
+    <script src="assets/js/poke-api.js"></script>
     <script src="assets/js/main.js"></script>
 </html>
