--- a/pokedex/index.html
+++ b/pokedex/index.html
@@ -27,6 +27,7 @@
     </body>
 
     <!-- Nosso JS -->
+    <script src="assets/js/pokemon-model.js"></script>
     <script src="assets/js/poke-api.js"></script>
     <script src="assets/js/main.js"></script>
 </html>
