acrescentando os botões de paginação

--- a/pokedex/index.html
+++ b/pokedex/index.html
@@ -23,6 +23,12 @@
             <h1>Pokédex</h1>
             <ol class="pokemons">
             </ol>
+
+            <div class="pagination">
+                <button id="laodMoreButton" type="button">
+                    Load More
+                </button>
+            </div>
         </section>
     </body>
 
