finalização do projeto

--- a/pokedex/index.html
+++ b/pokedex/index.html
@@ -25,7 +25,7 @@
             </ol>
 
             <div class="pagination">
-                <button id="laodMoreButton" type="button">
+                <button id="loadMoreButton" type="button">
                     Load More
                 </button>
             </div>
